Progress on: Bug 121041: Support more than one Bugzilla account per Workspace https://bugs.eclipse.org/bugs/show_bug.cgi?id=121041